tests/rosetta/transpiler/Zig/bin-given-limits.error
zig build: exit status 1
/tmp/bin-given-limits.zig:13:9: error: local variable is never mutated
/tmp/bin-given-limits.zig:13:9: note: consider using 'const'
/tmp/bin-given-limits.zig:42:9: error: local variable is never mutated
/tmp/bin-given-limits.zig:42:9: note: consider using 'const'
/tmp/bin-given-limits.zig:41:9: error: local variable is never mutated
/tmp/bin-given-limits.zig:41:9: note: consider using 'const'
/tmp/bin-given-limits.zig:53:9: error: local variable is never mutated
/tmp/bin-given-limits.zig:53:9: note: consider using 'const'
